tests/semantic/valid/15_multiple_funcs.tc
int square(int x) {
    return x * x;
}
int cube(int x) {
    return x * square(x);
}
int sum(int a, int b) {
    return a + b;
}
int main(void) {
    return sum(square(2), cube(2));
}
