tests/semantic/invalid/11_wrong_arg_count.tc
// ERR_WRONG_ARG_COUNT: calling function with wrong number of arguments
int add(int a, int b) {
    return a + b;
}
int main(void) {
    int x = add(1);
    return 0;
}
